deployment/k8s.yaml
kind: Service
apiVersion: v1
metadata:
  name: cart
  labels:
    app: cart
spec:
  selector:
    app: cart
  ports:
    - port: 8080
      name: http
  type: NodePort
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: cart
spec:
  selector:
    matchLabels:
      app: cart
  replicas: 1
  template:
    metadata:
      annotations: 
        sidecar.istio.io/inject: "true"      
      labels:
        app: cart
        version: v1
    spec:
      containers:
      - name: cart
        image: samuelpereiradesouza/cart:2
        ports:
        - containerPort: 3000
      restartPolicy: Always
---
