deployment/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cart
spec:
  hosts:
  - cart
  http:
  - route:
    - destination:
        host: cart
        subset: v1
---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: cart
spec:
  host: cart
  subsets:
  - name: v1
    labels:
      version: v1
---
